--- a/community/package.json
+++ b/community/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "community",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "react-scripts": "0.9.0"
-  },
+  "name": "community_server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.16.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.1",
+    "morgan": "^1.8.1",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0-beta.6"
+    "react-router-dom": "^4.0.0-beta.6",
+    "react-scripts": "^0.9.0"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+  },
+  "author": "Ariana",
+  "license": "ISC"
 }
